--- a/clone/templates/home.html
+++ b/clone/templates/home.html
@@ -139,11 +139,11 @@
       <div class="card mb-5">
         <div class="card-header bg-white">
           <div class="d-flex flex-row align-items-center">
-            <div class="rounded-circle overflow-hidden d-flex justify-content-center align-items-center border border-danger post-profile-photo mr-3">
+            <div class="rounded-circle overflow-hidden  border border-danger post-profile-photo mr-3">
               <a href="/profile/{{image.profile.id}}">
                 <img src="{{image.profile.profile_pic.url}}" alt="..."
                   style="transform: scale(1.5); width: 32px;  height: 32px; position:relative; left: 0;"
-                  class="rounded-cirlce">
+                  class="rounded-circle image">
               </a>
             </div>
             <div class="profile">
