--- a/static/css/base.css
+++ b/static/css/base.css
@@ -74,6 +74,10 @@ body {
   font-weight: lighter;
 }
 
+.image_tag{
+  display: flex;
+
+}
 /* END OF HOMEPAGE  */
 
 
@@ -112,7 +116,7 @@ body {
   height: 50px;
   width: 175px;
   margin: auto;
-  position: relative;
+  /* position: relative; */
 }
 
 /* END OF IMAGE UPLOAD  */
@@ -126,48 +130,14 @@ body {
 
 /* END OF SEARCH  */
 
+
+/* SINGLE IMAGE  */
+.single-card{
+  width: 614px;
+  height: auto;
+  display: flex;
+  /* align-items: center;
+  justify-content: center; */
+}
+/* END SINGLE IMAGE  */
 /* MEDIA QUERIES  */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-  /* Styles */
-}
-
-/* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) {
-  /* Styles */
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen and (max-width : 320px) {
-  /* Styles */
-}
-
-/* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-  /* Styles */
-}
-
-/* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-  /* Styles */
-}
-
-/* iPads (portrait) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-  /* Styles */
-}
-
-/* Desktops and laptops ----------- */
-@media only screen and (min-width : 1224px) {
-  /* Styles */
-}
-
-/* Large screens ----------- */
-@media only screen and (min-width : 1824px) {
-  /* Styles */
-}
-
-
-@media only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-  /* Styles */
-}
