--- a/clone/templates/django_registration/registration_form.html
+++ b/clone/templates/django_registration/registration_form.html
@@ -3,7 +3,7 @@
     <!-- Empty div -->
     <div class="col-md-4"></div>
     <div class="col-md-4"> {% if form.errors %} <p> Some Information Might be Incorrect </p> {% endif %} <div
-        class="panel panel-default card ">
+        class="panel panel-default card " id="register">
         <div class="panel-heading card-header bg-white">
           <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png"
