--- a/clone/templates/single-post.html
+++ b/clone/templates/single-post.html
@@ -2,8 +2,8 @@
 <!-- DISPLAY SINGLE IMAGE  -->
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <div class="card">
+    <div class="col-md-12" style="display: flex; align-items: center; justify-content: center;">
+      <div class="card single-card">
         <div class="card-header bg-white">
           <div class="d-flex flex-row align-items-center">
             <div
